--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -20,6 +19,17 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^5.13.7",
-    "nodemon": "^2.0.12"
-  }
+    "nodemon": "^2.0.12",
+    "node": "14.x"
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/omobowale/MinorityProgrammers---DAOggregate-MERN-Skills-Test.git"
+  },
+  "bugs": {
+    "url": "https://github.com/omobowale/MinorityProgrammers---DAOggregate-MERN-Skills-Test/issues"
+  },
+  "homepage": "https://github.com/omobowale/MinorityProgrammers---DAOggregate-MERN-Skills-Test#readme",
+  "description": ""
 }
