--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "client-install": "npm install --prefix client",
@@ -19,8 +19,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^5.13.7",
-    "nodemon": "^2.0.12",
-    "node": "14.x"
+    "nodemon": "^2.0.12"
   },
   "devDependencies": {},
   "repository": {
@@ -31,5 +30,8 @@
     "url": "https://github.com/omobowale/MinorityProgrammers---DAOggregate-MERN-Skills-Test/issues"
   },
   "homepage": "https://github.com/omobowale/MinorityProgrammers---DAOggregate-MERN-Skills-Test#readme",
-  "description": ""
+  "description": "",
+  "engines": {
+    "node": "14.x"
+  }
 }
